--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,7 +5,7 @@
         <span><%= image_tag 'arrow_top.png' %></span>
         <ul class="more_list">
           <li>
-            <%= link_to 'Delete', "/tweets/#{tweet.id}", data: { turbo_method: :delete } %>
+            <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
           </li>
         </ul>
       </div>
