--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,6 +4,9 @@
     <div class="more">
         <span><%= image_tag 'arrow_top.png' %></span>
         <ul class="more_list">
+        <li>
+          <%= link_to 'Edit', edit_tweet_path(tweet.id)%>
+        </li>
           <li>
             <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
           </li>
