--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,11 +5,14 @@
         <span><%= image_tag 'arrow_top.png' %></span>
         <ul class="more_list">
         <li>
+          <%= link_to 'Detail', tweet_path(tweet.id)%>
+        </li>
+        <li>
           <%= link_to 'Edit', edit_tweet_path(tweet.id)%>
         </li>
-          <li>
-            <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
-          </li>
+        <li>
+          <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
+        </li>
         </ul>
       </div>
       <p><%= tweet.text %></p>
