--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,22 @@
   <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">Cafe && restaurant</a></h1>
-        <div class="user_nav grid-6">
-          <a class="post" href="/tweets/new">Let's post it</a>
-        </div>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+            <%= link_to "Let's post!", new_tweet_path, class: "post" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "Log in", new_user_session_path, class: "post" %>
+            <%= link_to "Sign up", new_user_registration_path, class: "post" %>
+          </div>
+        <% end %>
       </div>
     </header>
+
     <%= yield %>
+
     <footer>
       <p>
         Copyright Cafe 2023.
