--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,15 @@
         <h1 class="grid-6"><a href="/">Cafe && restaurant</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-            <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
-            <%= link_to "Let's post!", new_tweet_path, class: "post" %>
+          <span><%= current_user.nickname %>
+            <ul class="user__info">
+              <li>
+                <%= link_to "My page", "/users/#{current_user.id}" %>
+                <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+              </li>
+            </ul>
+          </span>  
+          <%= link_to "Let's post!", new_tweet_path, class: "post" %>
           </div>
         <% else %>
           <div class="grid-6">
