ログイン中か投稿者かを条件分岐追加

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,6 +7,7 @@
         <li>
           <%= link_to 'Detail', tweet_path(tweet.id)%>
         </li>
+        <%if user_signed_in? && current_user.id == tweet.user_id %>
         <li>
           <%= link_to 'Edit', edit_tweet_path(tweet.id)%>
         </li>
