--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,6 +14,7 @@
         <li>
           <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
         </li>
+        <%end%>
         </ul>
       </div>
       <p><%= tweet.text %></p>
