--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,26 +1,5 @@
 <div class="contents row">
   <% @tweets.each do |tweet| %>
-    <div class="content_post" style="background-image: url(<%= tweet.image %>);">
-    <div class="more">
-        <span><%= image_tag 'arrow_top.png' %></span>
-        <ul class="more_list">
-        <li>
-          <%= link_to 'Detail', tweet_path(tweet.id)%>
-        </li>
-        <%if user_signed_in? && current_user.id == tweet.user_id %>
-        <li>
-          <%= link_to 'Edit', edit_tweet_path(tweet.id)%>
-        </li>
-        <li>
-          <%= link_to 'Delete', tweet_path(tweet.id), data: { turbo_method: :delete } %>
-        </li>
-        <%end%>
-        </ul>
-      </div>
-      <p><%= tweet.text %></p>
-      <span class="name">
-        <%= tweet.name %>
-      </span>
-    </div>
+  <%= render partial: "tweet", locals: { tweet: tweet } %>
   <% end %>
 </div>
