--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -12,12 +12,32 @@
         </li>
       </ul>
     </div>
-    <%end%>
+    <% end %>
     <p><%= @tweet.text %></p>
     <span class="name">
       <a href="/users/<%= @tweet.user.id %>">
         <span>Contributor</span><%= @tweet.user.nickname %>
       </a>
     </span>
+  </div>
+</div>
+<div class="container">
+    <% if user_signed_in? %>
+      <%= form_with(model: [@tweet, @comment], local: true) do |form| %>
+        <%= form.text_area :text, placeholder: "Comment", rows: "2" %>
+        <%= form.submit "SEND" %>
+      <% end %>
+    <% else %>
+      <strong><p>※※※ You must register and log in to post comments. ※※※</p></strong>
+    <% end %>
+     <div class="comments">
+      <h4>＜Comments list＞</h4>
+      <% @comments.each do |comment| %>
+        <p>
+          <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+          <%= comment.text %>
+        </p>
+      <% end %>
+    </div>
   </div>
 </div>
