--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
     <h3>Let's post it!</h3>
-    <%= render partial: "form", locals { tweet: @tweet }%>
+    <%= render partial: "form", locals: { tweet: @tweet } %>
   </div>
 </div>
