--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -638,7 +638,8 @@ ul li {
 body,
 html {
   height: 100%;
-  background-color: #f5f5f3;
+  background-image: url(cafeimage.jpg);
+  background-size: cover;
 }
 
 body {
@@ -666,7 +667,7 @@ a {
 }
 
 a:hover {
-  color: #57C3E9;
+  color: #330000;
 }
 
 .bold {
@@ -707,8 +708,8 @@ form input[type="submit"] {
 header.header div.header__bar.row div.grid-6 a.post {
   padding: 8px 20px;
   font-size: 14px;
-  border: 2px solid #57C3E9;
-  color: #57C3E9;
+  border: 2px solid #202122;
+  color: #464747;
   font-weight: bold;
   text-align: center;
   border-radius: 3px;
@@ -717,8 +718,8 @@ header.header div.header__bar.row div.grid-6 a.post {
 
 .btn:hover,
 header.header div.header__bar.row div.grid-6 a.post:hover {
-  border-color: #9bdbf2;
-  color: #9bdbf2;
+  border-color: #330000;
+  color: #330000;
 }
 
 .title {
@@ -738,7 +739,7 @@ header.header div.header__bar.row div.grid-6 a.post:hover {
 header.header {
   padding: 10px;
   border-bottom: 1px solid #D8D8D8;
-  background-color: #fff;
+  background-color: #BDB76B;
   position: fixed;
   top: 0;
   left: 0;
@@ -797,7 +798,7 @@ header.header .user_nav span:after {
 }
 
 header.header .user_nav span:hover ul {
-  color: #57C3E9;
+  color: #996600;
   display: block;
 }
 
@@ -931,7 +932,7 @@ div.contents.row div.content_post .more ul.more_list li a {
 }
 
 div.contents.row div.content_post .more ul.more_list li a:hover {
-  background-color: #57C3E9;
+  background-color: #996600;
   color: #fff;
 }
 
@@ -994,7 +995,7 @@ form textarea {
 }
 
 form input[type="submit"] {
-  background-color: #57C3E9;
+  background-color: #996600;
   border-radius: 20px;
   color: #fff;
   border: 0;
@@ -1002,7 +1003,7 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-  background-color: #84d3ef;
+  background-color: #996600;
 }
 
 .container {
@@ -1027,7 +1028,7 @@ form input[type="submit"]:hover {
 }
 
 .comments a {
-  color: #57C3E9;
+  color: #996600;
 }
 
 .comments a:hover {
