--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
               </li>
             </ul>
           </span>  
-          <%= link_to "Let's post!", new_tweet_path, class: "post" %>
+          <%= link_to "post", new_tweet_path, class: "post" %>
           </div>
         <% else %>
           <div class="grid-6">
