--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -657,7 +657,7 @@ body {
   letter-spacing: 0.15em;
   font-size: 16px;
   color: #666;
-  font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
+  font-family: 'Unica One', "Avenir", "Times New Roman", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
   margin: 0;
 }
 
@@ -856,7 +856,7 @@ div.contents.row h2 strong {
 }
 
 div.contents.row .new_user {
-  font-family: "游ゴシック", "YuGothic";
+  font-family: "Times New Roman", "YuGothic";
 }
 
 div.contents.row div.content_post {
@@ -982,6 +982,12 @@ div.contents.row .success {
 
 div.contents.row .success h3 {
   margin: 10px auto;
+}
+
+.tweet-image {
+  width: 100%
+  height: 300px;
+  object-fit:cover
 }
 
 form input,
