--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,5 +1,7 @@
-<div class="content_post" style="background-image: url(<%= tweet.image %>);">
-    <div class="more">
+<div class="content_post"  >
+  <div class="content_post" style="background-image: url(<%= tweet.image %>);">
+  <%= image_tag @tweet.image.variant(resize: '300x300'), class: 'tweet-image'  %>
+    <div class="more">   
         <span><%= image_tag 'arrow_top.png' %></span>
         <ul class="more_list">
         <li>
@@ -18,4 +20,4 @@
       <p><%= tweet.text %></p>
       <span class="name">
       </span>
-    </div>
+</div>
