--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,6 @@
 <div class="contents row">
   <div class="content_post" style="background-image: url(<%= @tweet.image %>);">
+  <%= image_tag @tweet.image.variant(resize: '300x300'), class: 'tweet-image'  %>
   <% if user_signed_in? && current_user.id == @tweet.user_id %>
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
