--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -984,11 +984,17 @@ div.contents.row .success h3 {
   margin: 10px auto;
 }
 
-.tweet-image {
-  width: 100%
-  height: 300px;
-  object-fit:cover
+.tweet__image{
+  width: 40%;
+  margin: 0 auto;
+  padding: 16px 0;
 }
+
+.card {
+  width: calc((100% - 50px) / 3);
+  margin-bottom: 40px;
+}
+
 
 form input,
 form textarea {
