--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,6 +1,8 @@
 <div class="contents row">
   <div class="content_post" style="background-image: url(<%= @tweet.image %>);">
-  <%= image_tag @tweet.image.variant(resize: '300x300'), class: 'tweet-image'  %>
+  <div class="tweet__image">
+    <%= image_tag @tweet.image %>
+  </div>
   <% if user_signed_in? && current_user.id == @tweet.user_id %>
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
@@ -41,4 +43,3 @@
       <% end %>
     </div>
   </div>
-</div>
