--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -21,11 +21,7 @@
     </div>
       <p><%= tweet.text %></p>
     <div id="like-btn<%= tweet.id %>">
-      <% if user_signed_in? && tweet.liked_by?(current_user)%>
-        <%=link_to "Liked", tweet_likes_path(tweet.id),  data: { turbo_method: :delete }, class: "tweet_likes" %>
-      <% else %>
-        <%=link_to "Like", tweet_likes_path(tweet.id), data: { turbo_method: :post }, class: "tweet_likes" %>
-      <% end %>
+    <%= render partial: "likes/like", locals: { tweet: tweet } %>
     </div>
       <span class="name">
       </span>
