--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -985,7 +985,7 @@ div.contents.row .success h3 {
 }
 
 .tweet__image{
-  width: 40%;
+  width: 60%;
   margin: 0 auto;
   padding: 16px 0;
 }
@@ -995,6 +995,15 @@ div.contents.row .success h3 {
   margin-bottom: 40px;
 }
 
+.tweet_likes {
+  border-radius: 50%;
+  line-height: 100px;
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  color: #fff;
+  background: #f56500;
+}
 
 form input,
 form textarea {
