デプロイエラー期限切れの画像削除

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -824,7 +824,7 @@ header.header .user_nav ul li a {
 }
 
 .form {
-  background: url(https://dl.dropboxusercontent.com/u/5840617/DeathtoStock_Wired3.jpg);
+  background: url();
   background-size: cover;
 }
 
