いいねボタンを機能させる

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,5 +1,8 @@
-<% if user_signed_in? && tweet.liked_by?(current_user)%>
-  <%=link_to "Liked", tweet_likes_path(tweet.id),  data: { turbo_method: :delete }, class: "tweet_likes" , remote: true %>
-<% else %>
-  <%=link_to "Like", tweet_likes_path(tweet.id), data: { turbo_method: :post }, class: "tweet_likes" , remote: true %>
+<% if user_signed_in? %>
+  <% if tweet.likes.exists?(user_id: current_user.id) %>
+    <% like = tweet.likes.find_by(user_id: current_user.id) %>
+    <%= link_to "Liked", tweet_like_path(tweet.id, like.id), data: { turbo_method: :delete }, class: "tweet_likes", remote: true %>
+  <% else %>
+    <%= link_to "Like", tweet_likes_path(tweet.id), data: { turbo_method: :post }, class: "tweet_likes", remote: true %>
+  <% end %>
 <% end %>
