--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1000,9 +1000,9 @@ div.contents.row .success h3 {
   line-height: 100px;
   width: 100px;
   height: 100px;
-  padding: 0;
+  padding: 7px;
   color: #fff;
-  background: #f56500;
+  background: #663300;
 }
 
 form input,
